import { JSONSchemaExampleGenerator } from '@stoplight/prism-http/mocker/generator/JSONSchemaExampleGenerator';
import { ISchema } from '@stoplight/types/schema';
import * as Ajv from 'ajv';

import { httpOperations, httpRequests } from '../../__tests__/fixtures';
import { HttpMocker } from '../index';

// TODO: Turn examples into test cases -> https://stoplightio.atlassian.net/wiki/spaces/PN/pages/5996560/Prism+Feature+List+draft
describe('http mocker', () => {
  const mocker = new HttpMocker(new JSONSchemaExampleGenerator());

  describe('request is valid', () => {
    describe('given enforced status code and contentType and exampleKey', () => {
      test('should return the matching example', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              code: '201',
              exampleKey: 'second',
              mediaType: 'application/xml',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });
    });

    describe('given enforced status code and contentType', () => {
      test('should return the first matching example', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              code: '201',
              mediaType: 'application/xml',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });
    });

    describe('given enforced example key', () => {
      test('should return application/json, 200 response', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              exampleKey: 'bear',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });

      test('and mediaType should return 200 response', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              exampleKey: 'second',
              mediaType: 'application/xml',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });
    });

    describe('given enforced status code', () => {
      test('should return the first matching example of application/json', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              code: '201',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });

      test('given that status code is not defined should throw an error', () => {
        const rejection = mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              code: '205',
            },
          },
        });

        return expect(rejection).rejects.toEqual(
          new Error('Requested status code is not defined in the schema.')
        );
      });

      test('and example key should return application/json example', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
          config: {
            mock: {
              code: '201',
              exampleKey: 'second',
            },
          },
        });

        expect(response).toMatchSnapshot();
      });
    });

    describe('HttpOperation contains example', () => {
      test('return lowest 2xx code and match response example to media type accepted by request', async () => {
        const response = await mocker.mock({
          resource: httpOperations[0],
          input: httpRequests[0],
        });

        expect(response).toMatchSnapshot();
      });

      test('return lowest 2xx response and the first example matching the media type', async () => {
        const response = await mocker.mock({
          resource: httpOperations[1],
          input: Object.assign({}, httpRequests[0], {
            data: Object.assign({}, httpRequests[0].data, {
              headers: { 'Content-type': 'application/xml' },
            }),
          }),
        });

        expect(response).toMatchSnapshot();
      });

      describe('the media type requested does not match the example', () => {
        test('return lowest 2xx, first example and matching media type', async () => {
          const response = await mocker.mock({
            resource: httpOperations[0],
            input: Object.assign({}, httpRequests[0], {
              data: Object.assign({}, httpRequests[0].data, {
                headers: { 'Content-type': 'application/xml' },
              }),
            }),
          });

          expect(response).toMatchSnapshot();
        });
      });
    });

    describe('HTTPOperation contain no examples', () => {
      test('return dynamic response', async () => {
        if (!httpOperations[1].responses[0].content[0].schema) {
          throw new Error('Missing test');
        }

        const ajv = new Ajv();
        const validate = ajv.compile(httpOperations[1].responses[0].content[0].schema as ISchema);

        const response = await mocker.mock({
          resource: httpOperations[1],
          input: httpRequests[0],
          config: {
            mock: {
              dynamic: true,
            },
          },
        });

        expect(response).toHaveProperty('statusCode', 200);
        expect(response).toHaveProperty('headers', { 'Content-type': 'application/json' });
        expect(validate(JSON.parse(response.body))).toBe(true);
      });
    });
  });

  describe('request is invalid', () => {
    test('returns 400 and static error response', async () => {
      const response = await mocker.mock({
        resource: httpOperations[0],
        input: httpRequests[1],
      });

      expect(response).toMatchSnapshot();
    });

    test('returns 400 and dynamic error response', async () => {
      if (!httpOperations[1].responses[1].content[0].schema) {
        throw new Error('Missing test');
      }

      const response = await mocker.mock({
        resource: httpOperations[1],
        input: httpRequests[1],
      });

      const ajv = new Ajv();
      const validate = ajv.compile(httpOperations[1].responses[1].content[0].schema as ISchema);

      expect(validate(JSON.parse(response.body))).toBe(true);
    });
  });
});
